# fetch_robotics

./: README.md
demo1_one_desk_several_poses/: CMakeLists.txt  README.md  camera.sh  package.xml
demo1_one_desk_several_poses/action/: Fibonacci.action
demo1_one_desk_several_poses/include/demo1_one_desk_several_poses/: fetch_action_server.h  fetch_clent.hpp  ros_goalActionResult.h  ros_goalFeedback.h  ros_goalGoal.h
demo1_one_desk_several_poses/launch/: fetch.launch
demo1_one_desk_several_poses/launch/include/: arm_camera.launch .xml  fetch.launch.xml
demo1_one_desk_several_poses/launch/utils/: playground.launch  simulation.launch  vcc.launch
demo1_one_desk_several_poses/robots/: fetch.gazebo.xacro~  fetch.urdf  fetch.urdf~
demo1_one_desk_several_poses/src/: demo1_one_desk_several_poses_node.cpp  fetch_action_server.cpp  ros_infiniTAM.cpp
demo1_one_desk_several_poses/src/Engine/: CMakeLists.txt  ImageSourceEngine.cpp~  UIEngine.h
demo1_one_desk_several_poses/src/ITMLib/: CMakeLists.txt
demo1_one_desk_several_poses/worlds/: vcc.sdf~
ros_infiniTAM/: CMakeLists.txt  package.xml
ros_infiniTAM/action/: ros_goal.action
ros_infiniTAM/include/ros_infiniTAM/: fetch_action_server.h  fibonacci_server.h  ros_goalAction.h  ros_goalActionFeedback.h  ros_goalActionGoal.h  ros_goalResult.h
ros_infiniTAM/src/: fetch_action_server.cpp  fetch_clent.h  fetch_clinet.cpp  fibonacci_server.cpp  ros_infiniTAM.cpp  service_image.cpp
ros_infiniTAM/src/Engine/: CMakeLists.txt~  RosEngine.cpp  RosEngine.h  UIEngine.cpp
ros_infiniTAM/srv/: req_im.srv
simple_navigation_goals/: CMakeLists.txt~  README.md  package.xml
simple_navigation_goals/rviz/: default_navigation.rviz
simple_navigation_goals/src/: simple_navigation_goals.cpp
